# Zyra

./: .gitignore  .pre-commit-config.yaml  BEHAVIORAL_TESTING.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  README.md  STYLE_PROFILES.md  debug_bug.py  debug_ep.py  debug_fen_parsing.py  debug_indices.py  debug_pawn_logic.py  debug_to_fen.py  debug_user_scenario.py  direct_uci_test.py  gui_selfplay.py  interactive_uci_test.py  manual_uci_test.py  performance_results.json  performance_test.py  plan.md  prd.md  pyproject.toml  simple_uci_test.py  test_fix.py  test_precommit.py  test_uci.py  test_uci_debug.py  test_uci_interactive.py  web_uci_test.html  working_uci_test.py  zyra_engine.sh  zyra_engine.sh.uci_options
.github/workflows/: ci.yml
cli/: __init__.py  runner.py
core/: __init__.py  board.py  moves.py  moves_optimized.py  zobrist.py
eval/: __init__.py  heuristics.py  heuristics_optimized.py
interfaces/: __init__.py  uci.py
openspec/: project.md
openspec/changes/2025-09-30-add-nice-to-have-extras/: tasks.md
openspec/changes/2025-09-30-add-risk-mitigations/: proposal.md  tasks.md
openspec/changes/add-success-metrics/: proposal.md  tasks.md
openspec/changes/add-web-play-ui/: design.md  proposal.md  tasks.md
openspec/changes/initialize-project-infrastructure/: proposal.md  tasks.md
openspec/changes/update-engine-strength/: proposal.md  tasks.md
openspec/specs/cli/: spec.md
performance/: __init__.py  benchmark.py  metrics.py  profiler.py
search/: __init__.py  mcts.py  mcts_optimized.py  tt.py
tests/: __init__.py  baseline_style_outputs.py  test_behavioral_style_integration.py  test_board.py  test_cli.py  test_explainability.py  test_heuristics.py  test_mcts.py  test_mcts_integration_eval.py  test_moves.py  test_nice_to_have_features.py  test_performance_regression.py  test_perft.py  test_smoke_games.py  test_style_profiles.py  test_uci.py  test_web_ui_endpoints.py
tests/baselines/: aggressive_baseline.json  defensive_baseline.json  experimental_baseline.json  performance_baseline.json
zyra/: __init__.py
zyra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zyra/cli/: __init__.py  runner.py
zyra/interfaces/: __init__.py  uci.py
zyra/web/: __init__.py  server.py
zyra/web/static/: app.js  (+1 more)
(+54 files in other folders)
